# radar-sounder-crw

./: .gitignore  README.md  dataset.py  dockerfile  encoder.py  entrypoint.sh  heatmap.py  launch_docker.sh  launch_test.sh  launch_test_batch.sh  launch_train.sh  launch_train_batch.sh  main.py  model.py  pyproject.toml  test.py  test_all.py  train.py  utils.py
imported/: crw.py  labelprop.py  maskedatt.py
scripts/: train.py
scripts/launch/: launch_test.sh  launch_test_batch.sh  launch_train.sh  launch_train_batch.sh
scripts/test/: heatmap.py  test.py  test_all.py  test_mc1.py  test_mc3.py  test_sharad.py  test_unet.py
src/: dataset.py  encoder.py  model.py  unet.py  utils.py
